@@ -4,6 +4,18 @@ Python News
 
 (editors: check NEWS.help for information about editing NEWS using ReST.)
 
+What's New in Python 2.5.1?
+=============================
+
+*Release date: XX-APR-2007*
+
+Core and builtins
+-----------------
+
+- Revert SF #1615701: dict.update() does *not* call __getitem__() or keys()
+  if subclassed.  This is to remain consistent with 2.5.
+
+
 What's New in Python 2.5.1c1?
 =============================
 
